# tabby

./: .gitignore  .lintstagedrc.js  .vercelignore  CONTRIBUTING.md  README.md  README_LINUX.md  package.json  pnpm-lock.yaml  test-suite.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-deploy.yml  ci.yml  release.yml  vercel-deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  test_output.json
frontend/: .gitignore  .prettierignore  electron.d.ts  env.example  eslint.config.mjs  next.config.mjs  nodemon.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsup.config.ts
frontend/electron/src/: app-state.ts  main.ts  preload.ts
frontend/scripts/: electron-dev.js
frontend/src/actions/: auth.ts  chat.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ClientComponent.tsx  memory-initializer.tsx  settings-synchronizer.tsx
frontend/src/hooks/: use-audio-recorder.ts  use-speech-playback.ts  use-voice-chat.ts  useTranscribeRecorder.ts
frontend/src/lib/: api-url.ts  conversations-api.ts  local-db.ts
frontend/src/lib/ai/: index.ts  (+4 more)
nextjs-backend/: .prettierignore  env.example  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
nextjs-backend/.source/: browser.ts  server.ts
nextjs-backend/src/: proxy.ts
nextjs-backend/src/actions/: auth.ts  chat.ts
nextjs-backend/src/app/: globals.css  layout.tsx
nextjs-backend/src/emails/: index.tsx
nextjs-backend/src/hooks/: use-user.tsx
(+212 files in other folders)
