[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mem0ai[graph]>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "vecs>=0.4.5",
    "httpx>=0.28.1",
    "chromadb>=1.4.1",
]
